Fix createArticle form

--- a/src/View/forms/createArticle.html.twig
+++ b/src/View/forms/createArticle.html.twig
@@ -1,12 +1,9 @@
 <form action="/save/article" method="post">
     <label>Titre</label>
-    <input type="text" name="title">
+    <input type="text" name="titre">
     <label>Slug</label>
     <input type="text" name="slug">
-    <textarea name="content">
+    <textarea name="contenu">
     </textarea>
     <input type="submit" name="submit">
-
-
-
 </form>
