--- a/src/View/front/index.html.twig
+++ b/src/View/front/index.html.twig
@@ -1,7 +1,6 @@
 {% for article in articles %}
     {{ article.titre }}
     {{ article.chapo }}
-    <a href="{{ article.slug }}">Read More</a>
+    <a href="/read/{{ article.slug }}">Read More</a>
 {% endfor %}
 
-<a href="{{ article.slug }}">Read More</a>
