--- a/src/View/forms/createArticle.html.twig
+++ b/src/View/forms/createArticle.html.twig
@@ -1,8 +1,7 @@
 <form action="/save/article" method="post">
-    <label>Titre</label>
+    <label for="titre">Titre</label>
     <input type="text" name="titre">
-    <label>Slug</label>
-    <input type="text" name="slug">
+    <label for="contenu">Contenu de l'article</label>
     <textarea name="contenu">
     </textarea>
     <input type="submit" name="submit">
