--- a/src/View/forms/createArticle.html.twig
+++ b/src/View/forms/createArticle.html.twig
@@ -5,4 +5,5 @@
     <textarea name="contenu">
     </textarea>
     <input type="submit" name="submit">
+    <input style="display: none" type="text" value="8" name="auteur">
 </form>
