Add method save comment

--- a/src/View/front/viewOne.html.twig
+++ b/src/View/front/viewOne.html.twig
@@ -2,4 +2,13 @@
 {{ article.chapo }}
 {{ article.contenu }}
 {{ article.slug }}
+<br />
+<form action="http://127.0.0.1:8000/save/comment/{{ article.id }}" method="post">
+    <label for="contenu">
+        Commentaire
+    </label>
+    <input name="contenu" type="text">
+
+    <button type="submit">Envoyer</button>
+</form>
 
