--- a/src/View/back/viewAllComments.html.twig
+++ b/src/View/back/viewAllComments.html.twig
@@ -4,5 +4,5 @@
 {% if commentaire.valide == false %}
 <a href="/valide/{{ commentaire.id }}">Valider le commentaire</a>
 {% endif %}
-<a href="/invaide/{{ commentaire.id }}">Invalider le commentaire</a>
+<a href="/invalide/{{ commentaire.id }}">Invalider le commentaire</a>
 <a href="/delete/comment/{{ commentaire.id }}">Supprimer le commentaire</a>
