--- a/src/View/front/viewOne.html.twig
+++ b/src/View/front/viewOne.html.twig
@@ -5,7 +5,9 @@
 <br />
 
 {% for commentaire in commentaires %}
-{{ commentaire.contenu }}
+    {{ commentaire.contenu }}
+    {{ commentaire.date|date('d/m/Y') }}
+    {{ commentaire.auteur.pseudo }}
 {% endfor %}
 <br />
 <form action="http://127.0.0.1:8000/save/comment/{{ article.id }}" method="post">
