--- a/src/View/forms/updateArticle.html.twig
+++ b/src/View/forms/updateArticle.html.twig
@@ -1,9 +1,8 @@
-<form action="/save/article" method="post">
+<form action="/update/article/{{ article.id }}" method="post">
     <label for="titre">Titre</label>
-    <input type="text" name="titre" content="{{ article.title }}">
+    <input type="text" name="titre" content="{{ article.title }}" required>
     <label for="contenu">Contenu de l'article</label>
-    <textarea name="contenu" content="{{ article.contenu }}">
+    <textarea name="contenu" content="{{ article.contenu }}" required>
     </textarea>
     <input type="submit" name="submit">
-    <input style="display: none" type="text" value="8" name="auteur">
 </form>
