Implement CRSF protection for articles"

--- a/src/View/back/articles.html.twig
+++ b/src/View/back/articles.html.twig
@@ -10,7 +10,7 @@
     {{ article.chapo }}
     <br />
     <a href="/update/article/{{ article.id }}">Editer l'article</a>
-    <a href="/delete/article/{{ article.id }}">Supprimer l'article</a>
+    <a href="/delete/article/{{ article.id }}/{{ token }}">Supprimer l'article</a>
 {% endfor %}
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
