--- a/src/View/back/articles.html.twig
+++ b/src/View/back/articles.html.twig
@@ -1,18 +1,24 @@
-<header>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</header>
+{% extends './base.html.twig' %}
 
-<a href="/create/article">Ecrire un nouvel article</a>
-<br />
-{% for article in articles %}
-    {{ article.titre }}
-    <br />
-    {{ article.chapo }}
-    <br />
-    <a href="/update/article/{{ article.id }}">Editer l'article</a>
-    <a href="/delete/article/{{ article.id }}/{{ token }}">Supprimer l'article</a>
-{% endfor %}
+{% block body %}
+    <p class="text-muted" style="text-align: center;"><a href="/admin">Retour à la page d'administration</a></p>
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="row">
+            {% for article in articles %}
+            <div class="card" style="margin: 20px;">
+                <div class="card-body">
+                    <h5 class="card-title">{{ article.titre }}</h5>
+                    <p class="card-text">{{ article.chapo }}</p>
+                    <a href="/update/article/{{ article.id }}" class="btn btn-info">Editer l'article</a>
+                    <a href="/delete/article/{{ article.id }}/{{ token }}" class="btn btn-danger">Supprimer l'article</a>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+{% endblock %}
+
+{% block footer %}{% endblock %}
+
+
