--- a/src/View/front/index.html.twig
+++ b/src/View/front/index.html.twig
@@ -1,6 +1,33 @@
-{% for article in articles %}
-    {{ article.titre }}
-    {{ article.chapo }}
-    <a href="/read/{{ article.slug }}">Read More</a>
-{% endfor %}
+{% extends './base.html.twig' %}
+
+{% block title %}
+    <title>Articles</title>
+{% endblock %}
+
+{% block body %}
+    {% for article in articles %}
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-md-10 mx-auto">
+                    <div class="post-preview">
+                        <a href="/read/{{ article.slug }}">
+                            <h2 class="post-title">
+                                {{ article.titre }}
+                            </h2>
+                            <h3 class="post-subtitle">
+                                {{ article.chapo }}
+                            </h3>
+                        </a>
+                        <p class="post-meta">Posté par
+                            <a href="/contact">{{ article.auteur.pseudo }}</a>
+                            le {{ article.date|date('d/m/Y') }}
+                            </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+    {% endfor %}
+{% endblock %}
+
 
