Change background image and update cli-config

--- a/src/View/base.html.twig
+++ b/src/View/base.html.twig
@@ -69,7 +69,7 @@
 
 {% block header %}
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('/Assets/img/home-bg.jpg')">
+    <header class="masthead" style="background-image: url('/Assets/img/cup-of-coffee-1280537_1920.jpg')">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
