--- a/src/View/base.html.twig
+++ b/src/View/base.html.twig
@@ -10,7 +10,7 @@
     <title>Thomas Larousse - Blog</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/Assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
     <link href="/Assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -120,9 +120,11 @@
 
 {% block scripts %}
     <!-- Bootstrap core JavaScript -->
-    <script src="/Assets/vendor/jquery/jquery.min.js"></script>
-    <script src="/Assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    <script
+            src="https://code.jquery.com/jquery-3.4.1.min.js"
+            integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
     <!-- Custom scripts for this template -->
     <script src="/Assets/js/clean-blog.min.js"></script>
 {% endblock %}
